--- a/WebConsulting/Pages/Services.razor
+++ b/WebConsulting/Pages/Services.razor
@@ -24,9 +24,9 @@
                         <p class="mt-2 text-gray-600">Набор консалтинговых услуг для бизнеса:</p>
                         <ul class="mt-4 text-orange-500 space-y-2">
                             <li><a href="/Services/Management">Управление проектами</a></li>
-                            <li><a href="">Организация менеджмента</a></li>
-                            <li><a href="">Оптимизация процессов</a></li>
-                            <li><a href="">Консалтинг по процессному управлению</a></li>
+                            <li><a href="/Services/Management">Организация менеджмента</a></li>
+                            <li><a href="/Services/Management">Оптимизация процессов</a></li>
+                            <li><a href="/Services/Management">Консалтинг по процессному управлению</a></li>
                         </ul>
                     </div>
                 </div>
@@ -37,9 +37,9 @@
                         <h3 class="text-xl font-bold text-gray-800">Организационное построение</h3>
                         <p class="mt-2 text-gray-600">Построение и модернизация организационного управления:</p>
                         <ul class="mt-4 text-orange-500 space-y-2">
-                            <li><a href="">Оптимизация структуры</a></li>
-                            <li><a href="">Системы мотивации</a></li>
-                            <li><a href="">Регламенты и инструкции</a></li>
+                            <li><a href="/Services/Management">Оптимизация структуры</a></li>
+                            <li><a href="/Services/Management">Системы мотивации</a></li>
+                            <li><a href="/Services/Management">Регламенты и инструкции</a></li>
                         </ul>
                     </div>
                 </div>
@@ -50,9 +50,9 @@
                         <h3 class="text-xl font-bold text-gray-800">Повышение эффективности</h3>
                         <p class="mt-2 text-gray-600">Услуги и инструменты для увеличения производительности:</p>
                         <ul class="mt-4 text-orange-500 space-y-2">
-                            <li><a href="">Система показателей KPI</a></li>
-                            <li><a href="">Оптимизация процессов</a></li>
-                            <li><a href="">Реинжиниринг бизнес-процессов</a></li>
+                            <li><a href="/Services/Management">Система показателей KPI</a></li>
+                            <li><a href="/Services/Management">Оптимизация процессов</a></li>
+                            <li><a href="/Services/Management">Реинжиниринг бизнес-процессов</a></li>
                         </ul>
                     </div>
                 </div>
@@ -63,8 +63,8 @@
                         <h3 class="text-xl font-bold text-gray-800">Бизнес-анализ</h3>
                         <p class="mt-2 text-gray-600">Анализ и оценка эффективности работы компаний:</p>
                         <ul class="mt-4 text-orange-500 space-y-2">
-                            <li><a href="">Анализ данных</a></li>
-                            <li><a href="">Исследование конкурентов</a></li>
+                            <li><a href="/Services/Management">Анализ данных</a></li>
+                            <li><a href="/Services/Management">Исследование конкурентов</a></li>
                         </ul>
                     </div>
                 </div>
@@ -75,9 +75,9 @@
                         <h3 class="text-xl font-bold text-gray-800">Система менеджмента качества ISO 9001</h3>
                         <p class="mt-2 text-gray-600">Консалтинг и сопровождение внедрения:</p>
                         <ul class="mt-4 text-orange-500 space-y-2">
-                            <li><a href="#">Аудит СМК</a></li>
-                            <li><a href="#">Внедрение СМК</a></li>
-                            <li><a href="#">Разработка документации</a></li>
+                            <li><a href="/Services/Management">Аудит СМК</a></li>
+                            <li><a href="/Services/Management">Внедрение СМК</a></li>
+                            <li><a href="/Services/Management">Разработка документации</a></li>
                         </ul>
                     </div>
                 </div>
