Update AdminPanel - Filter/Search/Phone/Table

--- a/WebConsulting/Layouts/Header.razor
+++ b/WebConsulting/Layouts/Header.razor
@@ -78,7 +78,7 @@
             <a href="/reviews" class="hover:text-orange-500">Отзывы</a>
             @if (ShowRegistrationButton)
             {
-                <a href="/registration" class="hover:text-orange-500">Регистрация</a>
+                <a href="/registration" class="hover:text-orange-500">Войти</a>
             }
 
             @if (ShowAdminProfile)
