--- a/WebConsulting/Pages/Reviews.razor
+++ b/WebConsulting/Pages/Reviews.razor
@@ -33,8 +33,8 @@
             <h1 class="text-2xl font-bold text-gray-800 mb-6">Общие отзывы</h1>
 
             <div>
-                <review-lab data-widgetid="6758377224021f12c4f5667c"></review-lab>
-                <script src="https://app.reviewlab.ru/widget/index-es2015.js" defer></script>
+                <script src="https://res.smartwidgets.ru/app.js" defer></script>
+                <div class="sw-app" data-app="0d5d6315d0b04122311d77afb7111f08"></div>
             </div>
         </div>
     </main>
